# wordpress-rs

./: Cargo.toml  LICENSE-MIT  README.md  deny.toml  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: client.rs  error.rs  lib.rs  types.rs
src/types/: request.rs  response.rs
src/wordpress/: client.rs.html  error.rs.html  lib.rs.html  types.rs.html
src/wordpress/types/: request.rs.html  response.rs.html
tests/: common.rs
wordpress/: all.html  enum.Error.html  enum.Order.html  enum.OrderBy.html  index.html  sidebar-items.js  struct.Client.html  struct.GetTypesData.html  struct.List.html  struct.Post.html  type.Result.html
wordpress/client/: struct.Client.html
wordpress/error/: enum.Error.html  type.Result.html
wordpress/types/: struct.List.html
wordpress/types/request/: enum.Order.html  enum.OrderBy.html  struct.GetTypesData.html
wordpress/types/response/: struct.Post.html
