[package]
name = "wordpress"
version = "0.0.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
reqwest = "0.10.4"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.48"
serde_urlencoded = "0.6.1"
url = { version = "2.1.1", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "0.2.13", features = [ "macros" ] }
