[package]
name = "wordpress"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
chrono = { version = "0.4.19", features = [ "serde" ] }
reqwest = "0.11.1"
serde = { version = "1.0.123", features = [ "derive" ] }
serde_json = "1.0.64"
serde_urlencoded = "0.7.0"
thiserror = "1.0.24"
tokio = "1.2.0"
url = { version = "2.2.1", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.2.0", features = [ "macros" ] }
